<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZenBakcup</string>
    <string name="hello_world">Zen</string>
    <string name="title2">Backup</string>
    <string name="action_local_save">Create local backup</string>
    <string name="addrserver">Address Server</string>
    <string name="portserver">Port Server</string>
    <string name="connect">Connect</string>
    <string name="send">Send</string>
    <string name="status">No pending task</string>
    <string name="list">List backups</string>
    <string name="delete">Delete backup</string>
    <string name="local">Save To</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="edit">Edit</string>

</resources>
