<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E6E6E6">

<Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spinner"></Spinner>

<ListView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/listview"></ListView>

<EditText
    android:id="@+id/addrServer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<EditText
    android:id="@+id/portServer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

 </LinearLayout>
     -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >




    <LinearLayout
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:textColor="#75ad3e"
            android:textSize="32dp"

            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:autoText="false"/>


        <TextView
            android:textColor="#ffffff"
            android:textSize="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView"/>



    </LinearLayout>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


   <TableRow
       android:layout_marginBottom="@dimen/activity_vertical_margin">

       <TextView
           android:textColor="#ffffff"
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="@dimen/activity_horizontal_margin"

           android:text="@string/addrserver"
           android:textAppearance="?android:attr/textAppearanceMedium"

           android:layout_gravity="center_vertical" />





       <EditText
           android:textColor="#75ad3e"
           android:background="#ffffff"
           android:id="@+id/editText1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"

           android:ems="10"

           android:layout_gravity="center_vertical">

           <requestFocus />
       </EditText>
    </TableRow>


   <TableRow
       android:layout_marginBottom="@dimen/activity_vertical_margin">

       <TextView
           android:textColor="#ffffff"
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"

           android:text="@string/portserver"
           android:textAppearance="?android:attr/textAppearanceMedium"

           android:layout_gravity="center_vertical" />

    <EditText
        android:textColor="#75ad3e"
        android:background="#ffffff"
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="textPassword"
        android:layout_x="146dp"
        android:layout_y="237dp" />
</TableRow>

 <TableRow
     android:layout_marginBottom="@dimen/activity_vertical_margin">


    <TextView
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <!--<TextView

        android:textColor="#e73111"
        android:id="@+id/status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_disconnected"
        android:textSize="26dip"
        />-->
     <ProgressBar

         android:layout_width="fill_parent"
         android:layout_height="fill_parent"


           android:id="@+id/progress"/>
</TableRow>

<TableRow
    android:layout_marginTop="@dimen/activity_vertical_margin_button_row"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <Button
        android:layout_marginRight="@dimen/activity_horizontal_margin_button"
        android:id="@+id/button1"
        android:onClick="login"
        android:text="@string/connect"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/button"/>

    <Button
        android:text="@string/send"
        android:id="@+id/send_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:focusable="false"
        android:clickable="false"
        style="@style/button"/>
</TableRow>
</TableLayout>


    <!-- <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
         -->

</LinearLayout>